Fix: Merge IoC branch

--- a/Stores.Sales.Backend.IoC/Stores.Sales.Backend.IoC.csproj
+++ b/Stores.Sales.Backend.IoC/Stores.Sales.Backend.IoC.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Stores.Sales.Backend.Controllers\Stores.Sales.Backend.Controllers.csproj" />
+    <ProjectReference Include="..\Stores.Sales.Backend.Presenters\Stores.Sales.Backend.Presenters.csproj" />
+    <ProjectReference Include="..\Stores.Sales.Backend.UseCases\Stores.Sales.Backend.UseCases.csproj" />
+  </ItemGroup>
+
 </Project>
